# aoc2023

./: LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests-report-coverage.yaml
aoc2023/: _cli.py  _getinput.py
aoc2023/day01/: part1.py  part2.py
aoc2023/day02/: game.py  part1.py  part2.py
aoc2023/day03/: part1.py
aoc2023/tests/: test__cli.py  test__getinput.py
aoc2023/tests/day01/: test_part1.py  test_part2.py
aoc2023/tests/day02/: test_game.py  test_part1.py  test_part2.py
aoc2023/tests/day03/: test_part1.py
