[tool.poetry]
name = "aoc2023"
version = "0.0.1"
description = "Advent of code 2023 solutions."
license = "MIT"
authors = ["Parker Ottaway"]
readme = "README.md"
repository = "https://github.com/parkerottaway/aoc2023"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
day01part1 = "aoc2023.day01.part1:_main"
day01part2 = "aoc2023.day01.part2:_main"
day02part1 = "aoc2023.day02.part1:_main"
day02part2 = "aoc2023.day02.part2:_main"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"

[tool.poetry.group.test.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
